@@ -17,7 +17,7 @@ repository.type   = git
 [Prereqs]
 Test::More = 0
 Test::Deep = 0
-HTTP::Thin = 0;
+HTTP::Thin = 0
 HTTP::CookieJar = 0.004
 URI = 0
 JSON = 0
