@@ -1,5 +1,7 @@
 0.0200 - June 18, 2013
  * Add requirement HTTP::CookieJar to keep track of cookies sent by the Wing server.
+ * Move from LWP::UserAgent to HTTP::Thin internally.
+ * Add tests
 
 0.0100 - May 31, 2013
  * Initial public release.
